# livraria_front

./: .env  pyproject.toml
src/views/: LoginView.vue
